--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "format:check": "prettier --ignore-path ./.git-ignore --check \"./**/*.{html,json,js,tx,css}\"",
     "lint": "eslint --ignore-path ./.gitignore --fix \"./**/*.{js,ts}\"",
     "lint:check": "eslint --ignore-path ./.gitignore --quiet \"./**/*.{js,ts}\"",
-    "clean:cache": "rm -rf .cache dist"
+    "clean:cache": "rm -rf .cache dist",
+    "ts:watch": "tsc --watch --preserveWatchOutput",
+    "ts:check": "tsc"
   },
   "keywords": [
     "exercise",
@@ -25,9 +27,13 @@
     "eslint-plugin-import": "^2.23.4",
     "jest": "^27.0.6",
     "parcel-bundler": "^1.12.5",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5"
   },
   "browserslist": [
     "last 2 Firefox versions"
-  ]
+  ],
+  "dependencies": {
+    "src": "^1.1.2"
+  }
 }
